[tool.poetry]
name = "behavior_engine"
version = "0.1.0"
description = ""
authors = ["Kyle Morrison <56929213+kmorrisongr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "behavior_engine", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
dataclasses-json = "^0.6.7"
numpy = "^2.1.2"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.poetry.group.hooks.dependencies]
autoflake = "^2.3.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
vulture = "^2.13"
pyright = "^1.1.389"

[tool.poetry.group.hook_helpers.dependencies]
flake8-pyproject = "^1.2.3"

[tool.autoflake]
remove-all-unused-imports = true

[tool.black]
line-length = 100
preview = true
enable-unstable-feature = ["string_processing"]

[tool.flake8]
max-line-length = 100
max-complexity = 10

[tool.isort]
profile = "black"

[tool.pyright]
strict = ["src"]
reportUnnecessaryTypeIgnoreComment = true
reportUnnecessaryTypeIgnoreCommentSeverity = "error"
reportUnknownImport = true
reportUnknownVariableType = true
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownLambdaType = true
reportUnknownMemberType = true
reportIncompatibleMethodOverride = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
